--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
  </video>
  <h2 class="header--secondary">Your personal travel guide</h2>
  <h4 class="header--sub-header">Excursion resources places you like, and recommends new points of interest around you.</h4>
-<p><img src="/resources/image/camp.webp"></p>
-<p><img src="/resources/image/phone.webp"></p>
+<p><img src="resources/image/camp.webp"></p>
+<p><img src="resources/image/phone.webp"></p>
+<h2 class="header--secondary">coming Soon for iPhone and Android</h2>
+<p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a> </p>
 </body>
 </html>
