--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>   
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a> </p>
+    <p><a class="link--cta" href="#"> Download Excursion (Coming soon!)</a> </p>
  <video autoplay loop>
 <source src="resources/video/excursion.mp4" type="video/mp4">
  </video>
@@ -19,5 +19,6 @@
 <p><img src="resources/image/phone.webp"></p>
 <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
 <p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a> </p>
+<h4 class="header--sub-header1">© Excursion</h4>
 </body>
 </html>
