--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <p><img src="resources/image/phone.webp"></p>
 <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
 <p><a class="link--cta" href="#">Download Excursion (Coming soon!)</a> </p>
-<h4 class="header--sub-header1">© Excursion</h4>
+<p class="footer--main">© Excursion</p>
 </body>
 </html>
